# coova-chilli

./: .gitignore  ChangeLog  Dockerfile.buildcheck  Makefile.am  README.md  acsite.m4  configure.ac  meson.build  meson_options.txt
.github/workflows/: actions.yml
conf/: Makefile.am  defaults.in  functions.in  gui-config-default.ini  meson.build  up.sh.in
debian/: rules
distro/suse/: coova-chilli.spec.in
doc/: Makefile.am  attributes  chilli.conf  chilli.conf.5.in  chilli_query.1.in  dictionary.coovachilli  freeradius.users  hotspotlogin.cgi  http-aaa-example.php  meson.build
miniportal/: Makefile.am  config-local.sh.in  functions.sh.in  register.chi.in
rpm/: coova-chilli.spec
scripts/: meson-gen-cmdline.sh
src/: Makefile.am  chilli.c  chilli.h  chilli_limits.h  chksum.c  cmdline.ggo  cmdsock.h  conn.c  dhcp.c  dhcp.h  dns.c  dns.h  garden.c  garden.h  ifscan.c  iphash.c  ippool.c  kcoova.c  location.c  main-opt.c  main-proxy.c  main-query.c  main-radconfig.c  main-redir.c  md5.c  md5.h  meson.build  ms_chap.c  net.c  net.h  options.c  options.h  pkt.h  radius.c  radius.h  radius_coovachilli.h  redir.c  redir.h  safe.c  session.c  (+9 more)
src/avl/: avl.c
www/: Makefile.am  meson.build
